--- a/第一章.md
+++ b/第一章.md
@@ -10,6 +10,6 @@
 - 具有對話記憶功能，能夠對話式交流（閒置太久會自動清除對話紀錄）
 - 可以手動清除對話紀錄（解決上下文超過Tokens的長度限制問題）
 
-根據以上需求，我逐步完成程式，並且把成果展示在此。
+根據以上目標，我把成果展示在這裡
 
 [⬅️ 上一章](README.md) | [📖 目錄](README.md) | [下一章 ➡️](第二章.md)
