--- a/第二章.md
+++ b/第二章.md
@@ -1,7 +1,7 @@
 [⬅️ 上一章](第一章.md) | [📖 目錄](README.md) | [下一章 ➡️](第三章.md)
 # **第二章： 程式說明**
 
-**[完整的程式在此](AI_Chat_bot(可公開版本).py)**  
+**[💾完整的程式在此](AI_Chat_bot(可公開版本).py)**  
 
 在說明程式之前，請先安裝好相關套件：  
 
