--- a/第二章.md
+++ b/第二章.md
@@ -32,7 +32,7 @@ pip install -q requests
    其中，儲存使用者資料的 data 字典格式如下：  
 	```python
 	# 這不是程式碼，只是說明data的資料結構，變數名稱也已經修改以增進可讀性
-	# 使用伺服器ID、使用者ID作為索引，可以避免使用者重名、伺服器重名的問題
+	# 使用伺服器ID、使用者ID作為索引，可以避免使用者暱稱重名、伺服器名稱相同的問題(資料一樣就能共用對話紀錄，所以使用獨一無二的ID做使用者辨別會是最好的方法)
 	data = {
 		伺服器ID0: {
 			使用者ID0: {
@@ -86,6 +86,8 @@ pip install -q requests
 
 4. 自訂函式：呼叫Groq API  
 	這個自訂函式接收list形式的使用者對話紀錄，並使用`request.post`方法把訊息傳給Groq API，並取得回應，將回應解析後回傳  
+	
+ 	這裡不使用Groq或者OpenAI函式庫是因為我想要讓程式更加輕量化，本質上這個Discord對話機器人只需要處理文字內容，而這兩個套件都包含了圖像處理、聲音訊息之類的功能。對於一個輕量的Discord機器人，這些東西都顯得太冗餘，也會拖慢執行的效率（考慮在手機上執行，容易改善效能可以很直觀的影響功耗）  
 	```Python
 	#call Groq API by requests module, messages is user's chat history
 	def call_groq_api(messages):
@@ -112,7 +114,7 @@ pip install -q requests
 	```
 
 
-5. 自訂函式：不活躍對話紀錄檢查器
+6. 自訂函式：不活躍對話紀錄檢查器
 
 	這個自訂函式會被py-cord的事件迴圈循環呼叫，每隔一小時會檢查一次不活躍的對話紀錄，然後清除超過兩個小時沒使用的對話紀錄
 
@@ -142,7 +144,7 @@ pip install -q requests
 	```
 
 
-6. 自訂函式：自訂命令行指令（exit）
+7. 自訂函式：自訂命令行指令（exit）
 
 	![exit命令偵測](pictures/第二章_01.jpg)
 
@@ -162,7 +164,7 @@ pip install -q requests
 	```  
 
 
-7. 自訂類（class）：彈出式Discord表單
+8. 自訂類（class）：彈出式Discord表單
 
 	![Discord上的彈出表單](pictures/第二章_02.jpg)
 
@@ -209,7 +211,7 @@ pip install -q requests
 	機器人成功**啟動後的動作**、**所有機器人的/slash commands**都在後面描述  
 
 
-8. py-cord事件：當機器人上線(bot.event on_ready)
+9. py-cord事件：當機器人上線(bot.event on_ready)
 
 	這裡你可以自訂**當機器人上線後要做的動作**，簡單描述一下我這裡的設定：  
 	2. 後台列印：機器人已成功上線，使用的機器人名稱為：`機器人名稱#代號`  
@@ -237,7 +239,7 @@ pip install -q requests
 	    print(f'{datetime.now()} ☑ console command handler activated')
 	```
 
-9. Discord斜線命令：/ask_ai
+10. Discord斜線命令：/ask_ai
 
 	![/ask_ai的斜線命令](pictures/第二章_04.jpg)  
 	
