--- a/第二章.md
+++ b/第二章.md
@@ -70,7 +70,7 @@ pip install -q requests
 	```
 
 
-3. 設定這個Discord機器人的意圖（Intents）
+3. 設定這個Discord機器人的意圖（Intents）  
 
 	因為我的機器人只會與Discord玩家伺服器互動，並且只會被斜線命令（`/slash commands`）呼叫，所以我只需要最基礎的guilds權限即可  
 
@@ -87,7 +87,7 @@ pip install -q requests
 4. 自訂函式：呼叫Groq API  
 	這個自訂函式接收list形式的使用者對話紀錄，並使用`request.post`方法把訊息傳給Groq API，並取得回應，將回應解析後回傳  
 	
- 	這裡不使用Groq或者OpenAI函式庫是因為我想要讓程式更加輕量化，本質上這個Discord對話機器人只需要處理文字內容，而這兩個套件都包含了圖像處理、聲音訊息之類的功能。對於一個輕量的Discord機器人，這些東西都顯得太冗餘，也會拖慢執行的效率（考慮在手機上執行，容易改善效能可以很直觀的影響功耗）  
+ 	這裡不使用Groq或者OpenAI函式庫是因為我想要讓程式更加輕量化，本質上這個Discord對話機器人只需要處理文字內容，而這兩個套件都包含了圖像處理、聲音訊息之類的功能。對於一個輕量的Discord機器人，這些東西都顯得太冗餘，也會拖慢執行的效率（考慮在手機上執行，改善效能會明顯的表現出續航力的差異）  
 	```Python
 	#call Groq API by requests module, messages is user's chat history
 	def call_groq_api(messages):
@@ -116,9 +116,9 @@ pip install -q requests
 
 6. 自訂函式：不活躍對話紀錄檢查器
 
-	這個自訂函式會被py-cord的事件迴圈循環呼叫，每隔一小時會檢查一次不活躍的對話紀錄，然後清除超過兩個小時沒使用的對話紀錄
+	這個自訂函式會被py-cord的事件迴圈循環呼叫，每隔一小時會檢查一次不活躍的對話紀錄，然後清除超過兩個小時沒使用的對話紀錄  
 
-	⚠️簡單說明一下，你不能**在走訪字典的時候刪除字典的鍵值對**，正確的做法是先建立要刪除的字典鍵清單，待走訪完目標字典後再刪除其內容  
+	⚠️簡單說明一下，你不能**在走訪字典的時候刪除當前字典的鍵值對（key & value）**，正確的做法是先建立要刪除的字典鍵清單，待走訪完目標字典後再刪除其內容  
 	```Python
 	#check inactive user's chat history every 3600 seconds(1 hour) and delete them if they have been inactive for more than 2 hours.
 	#this function will be called by asyncio.create_task() and will run in a background thread.
