--- a/第二章.md
+++ b/第二章.md
@@ -146,7 +146,7 @@ pip install -q requests
 
 7. 自訂函式：自訂命令行指令（exit）
 
-	![exit命令偵測](pictures/第二章_01.jpg)
+	<img src="pictures/第二章_01.jpg" alt="exit命令偵測" width="630" height="222"/>  
 
 	這個自訂函式會被py-cord的事件迴圈循環呼叫，隨時偵測console輸入的內容，如果輸入的內容包含`exit`，則安全地將機器人離線，並結束整個程式  
 	```Python
@@ -164,7 +164,7 @@ pip install -q requests
 	```  
 
 
-8. 自訂類（class）：彈出式Discord表單
+9. 自訂類（class）：彈出式Discord表單
 
 	![Discord上的彈出表單](pictures/第二章_02.jpg)
 
@@ -211,7 +211,7 @@ pip install -q requests
 	機器人成功**啟動後的動作**、**所有機器人的/slash commands**都在後面描述  
 
 
-9. py-cord事件：當機器人上線(bot.event on_ready)
+10. py-cord事件：當機器人上線(bot.event on_ready)
 
 	這裡你可以自訂**當機器人上線後要做的動作**，簡單描述一下我這裡的設定：  
 	2. 後台列印：機器人已成功上線，使用的機器人名稱為：`機器人名稱#代號`  
@@ -239,7 +239,7 @@ pip install -q requests
 	    print(f'{datetime.now()} ☑ console command handler activated')
 	```
 
-10. Discord斜線命令：/ask_ai
+11. Discord斜線命令：/ask_ai
 
 	![/ask_ai的斜線命令](pictures/第二章_04.jpg)  
 	
@@ -286,7 +286,7 @@ pip install -q requests
  	```
 
 
-11. Discord斜線命令：/set_data  
+12. Discord斜線命令：/set_data  
 
  	![/set_data的斜線命令](pictures/第二章_02.jpg)  
 
@@ -301,7 +301,7 @@ pip install -q requests
 	```  
 
 
-12. Discord斜線命令：/clear_memory
+13. Discord斜線命令：/clear_memory
 
 	![/clear_memory的斜線命令](pictures/第二章_05.jpg)  
 
@@ -327,7 +327,7 @@ pip install -q requests
 	```    
 
 
-13. Discord斜線命令：/model_info
+14. Discord斜線命令：/model_info
 
 	![/model_info的斜線命令](pictures/第二章_06.jpg)  
 
@@ -341,7 +341,7 @@ pip install -q requests
 	```  
 
 
-14. Discord斜線命令：/available_models
+15. Discord斜線命令：/available_models
 
 	![/available_models的斜線命令](pictures/第二章_07.jpg)   
 
@@ -358,7 +358,7 @@ pip install -q requests
 	    await ctx.followup.send(response)
 	```    
 
-15. Discord斜線命令：/change_model
+16. Discord斜線命令：/change_model
 
 	![/change_model的斜線命令](pictures/第二章_08.jpg)  
 	![/change_model的斜線命令](pictures/第二章_09.jpg)  
@@ -381,7 +381,7 @@ pip install -q requests
 	    await ctx.followup.send(f'已將模型切換為： {model}')
 	```    
 
-16. Discord斜線命令：/get_help
+17. Discord斜線命令：/get_help
 
 	![/get_help的斜線命令](pictures/第二章_10.jpg)  
 
@@ -411,7 +411,7 @@ pip install -q requests
 	    await ctx.followup.send(response)
 	```  
 
-17. 啟動機器人！  
+18. 啟動機器人！  
 
 	前面都是Discord機器人的功能撰寫，最後就是讓我們的機器人上線了！使用`bot.run(DiscordBot_api_key)`來讓機器人啟動  
 
