--- a/第二章.md
+++ b/第二章.md
@@ -146,7 +146,7 @@ pip install -q requests
 
 7. 自訂函式：自訂命令行指令（exit）
 
-	<img src="pictures/第二章_01.jpg" alt="exit命令偵測" width="630" height="222"/>  
+	><img src="pictures/第二章_01.jpg" alt="exit命令偵測" width="630" height="222"/>  
 
 	這個自訂函式會被py-cord的事件迴圈循環呼叫，隨時偵測console輸入的內容，如果輸入的內容包含`exit`，則安全地將機器人離線，並結束整個程式  
 	```Python
