--- a/第二章.md
+++ b/第二章.md
@@ -166,7 +166,7 @@ pip install -q requests
 
 9. 自訂類（class）：彈出式Discord表單
 
-	![Discord上的彈出表單](pictures/第二章_02.jpg)
+	><img src="pictures/第二章_02.jpg" alt="Discord上的彈出表單" width="390" height="275"/>  
 
 	這個表單是用來填入多行訊息的，受限於Discord slash commands只能輸入單行訊息，如果想要請AI解釋大量的內容時，複製貼上也會被阻擋。因此特地寫一個Class，當`/set_data`命令被執行時，在使用者畫面上跳出表單，**填入想要讓AI參考的資料**  
 
@@ -211,7 +211,7 @@ pip install -q requests
 	機器人成功**啟動後的動作**、**所有機器人的/slash commands**都在後面描述  
 
 
-10. py-cord事件：當機器人上線(bot.event on_ready)
+11. py-cord事件：當機器人上線(bot.event on_ready)
 
 	這裡你可以自訂**當機器人上線後要做的動作**，簡單描述一下我這裡的設定：  
 	2. 後台列印：機器人已成功上線，使用的機器人名稱為：`機器人名稱#代號`  
@@ -221,7 +221,7 @@ pip install -q requests
 	6. 註冊事件：將偵測後台命令`exit`的自訂函式註冊到py-cord的事件迴圈(循環執行)
  
 	on_ready時的後台輸出畫面：
-	![on_ready時的後台輸出畫面](pictures/第二章_03.jpg)
+	><img src="pictures/第二章_03.jpg" alt="on_ready時的後台輸出畫面" width="610" height="220"/>  
 
 	```Python
 	@bot.event
@@ -239,9 +239,9 @@ pip install -q requests
 	    print(f'{datetime.now()} ☑ console command handler activated')
 	```
 
-11. Discord斜線命令：/ask_ai
+13. Discord斜線命令：/ask_ai
 
-	![/ask_ai的斜線命令](pictures/第二章_04.jpg)  
+	><img src="pictures/第二章_04.jpg" alt="/ask_ai的斜線命令" width="800" height="640"/>  
 	
 	這是機器人最主要也最常被使用的命令，功能是問AI問題  
 	
@@ -286,13 +286,13 @@ pip install -q requests
  	```
 
 
-12. Discord斜線命令：/set_data  
+15. Discord斜線命令：/set_data  
 
- 	![/set_data的斜線命令](pictures/第二章_02.jpg)  
+	><img src="pictures/第二章_02.jpg" alt="Discord上的彈出表單" width="390" height="275"/>  
 
   	這個指令很簡單，功能是讓使用者可以多行輸入「想要讓AI參考的資訊」  
 	
-	當使用者使用`/set_data`指令後，Discord畫面就會跳出前面提過的表單(class)，讓使用者可以多行輸入資料
+	當使用者使用`/set_data`指令後，Discord畫面就會跳出前面提過的表單(class)，讓使用者可以多行輸入資料  
 	```Python
 	@bot.slash_command(name='set_data', description='輸入給AI參考的資料(Ex：程式碼)')
 	async def set_data(ctx: discord.ApplicationContext):
@@ -301,9 +301,9 @@ pip install -q requests
 	```  
 
 
-13. Discord斜線命令：/clear_memory
+16. Discord斜線命令：/clear_memory
 
-	![/clear_memory的斜線命令](pictures/第二章_05.jpg)  
+	><img src="pictures/第二章_05.jpg" alt="/clear_memory的斜線命令" width="800" height="210"/>  
 
 	當這個指令被觸發時，清除指令使用者的對話紀錄  
 
@@ -327,9 +327,9 @@ pip install -q requests
 	```    
 
 
-14. Discord斜線命令：/model_info
+18. Discord斜線命令：/model_info
 
-	![/model_info的斜線命令](pictures/第二章_06.jpg)  
+	><img src="pictures/第二章_06.jpg" alt="/model_info的斜線命令" width="800" height="150"/>  
 
 	資訊提供型的斜線命令，功能是顯示目前整在使用的模型以及他的最大Tokens，被使用者觸發後立刻回傳訊息
 	```Python
@@ -341,9 +341,9 @@ pip install -q requests
 	```  
 
 
-15. Discord斜線命令：/available_models
+20. Discord斜線命令：/available_models
 
-	![/available_models的斜線命令](pictures/第二章_07.jpg)   
+	><img src="pictures/第二章_07.jpg" alt="/available_models的斜線命令" width="800" height="240"/>  
 
  	與`/model_info`類似，功能是顯示目前有哪些模型可以使用，以及這些模型可用的最大Tokens，被使用者觸發後立刻回傳訊息
 
@@ -358,10 +358,10 @@ pip install -q requests
 	    await ctx.followup.send(response)
 	```    
 
-16. Discord斜線命令：/change_model
+22. Discord斜線命令：/change_model
 
-	![/change_model的斜線命令](pictures/第二章_08.jpg)  
-	![/change_model的斜線命令](pictures/第二章_09.jpg)  
+	><img src="pictures/第二章_08.jpg" alt="/change_model的斜線命令" width="790" height="300"/>  
+ 	><img src="pictures/第二章_09.jpg" alt="/change_model的斜線命令" width="790" height="135"/>  
 
  	選單式的斜線命令，可選項來自於從model_list[list]提取的model_names[list]  
 
@@ -381,9 +381,9 @@ pip install -q requests
 	    await ctx.followup.send(f'已將模型切換為： {model}')
 	```    
 
-17. Discord斜線命令：/get_help
+24. Discord斜線命令：/get_help
 
-	![/get_help的斜線命令](pictures/第二章_10.jpg)  
+ 	><img src="pictures/第二章_10.jpg" alt="/get_help的斜線命令" width="790" height="420"/>  
 
  	資訊提供型的斜線命令，功能是顯示一些小提示，在觸發後回傳資料
 
@@ -411,7 +411,7 @@ pip install -q requests
 	    await ctx.followup.send(response)
 	```  
 
-18. 啟動機器人！  
+26. 啟動機器人！  
 
 	前面都是Discord機器人的功能撰寫，最後就是讓我們的機器人上線了！使用`bot.run(DiscordBot_api_key)`來讓機器人啟動  
 
